# ShantyTown-DMMGameLauncher

./: .gitignore  CLAUDE.md  README.md  build.ps1  pyproject.toml
docs/: 00-bootstrap.md  01-core.md  02-store.md  03-gui.md  README.en.md  README.md  README.zh-CN.md  reference-launch-tskx.ps1  token.txt
scripts/: build_exe.py
src/shantytown/: __init__.py  __main__.py  loginhelper.py
src/shantytown/core/: __init__.py  api.py  debug.py  dmmcfg.py  download.py  exe_finder.py  hwid.py  i18n.py  login_parsing.py  models.py  process_finder.py  secure_storage.py  shortcuts.py  telemetry.py  verify.py
src/shantytown/gui/: __init__.py  fluent.py  game_card.py  game_settings_dialog.py  icons.py  login_dialog.py  main_window.py  profile_dialog.py  progress_dialog.py  spinner.py  theme.py  toast.py  toggle_switch.py  tutorial_dialog.py  web_login_dialog.py  workers.py  (+3 more)
tests/: conftest.py  test_api.py  test_dmmcfg.py  test_download.py  test_exe_finder.py  test_game_settings_dialog.py  test_games.py  test_i18n.py  test_known_games.py  test_login_dialog.py  test_login_parsing.py  test_loginhelper.py  test_main_args.py  test_main_window.py  test_paths.py  test_process_finder.py  test_profile_dialog.py  test_profiles.py  test_progress_dialog.py  test_secure_storage.py  test_settings.py  test_shortcuts.py  test_silent_launch.py  test_spinner.py  test_telemetry.py  test_toast.py  test_tutorial_dialog.py  test_verify.py  test_web_login_dialog.py  test_webview_login_agent.py  test_webview_login_client.py  test_webview_support.py  test_workers.py
tests/fixtures/: dmmgame.cnf.sample
(+7 files in other folders)
