[project]
name = "shantytown"
version = "0.1.0"
description = "PyQt6 alternative launcher for DMM Game Player with per-game profiles (판자촌)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "shantytown contributors" }]
dependencies = [
    "PyQt6>=6.6",
    "cryptography>=49.0.0",
    "httpx>=0.27",
    "psutil>=5.9",
    "pyqt6-webengine>=6.6",
]

[project.scripts]
shantytown = "shantytown.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
    "mypy>=1.10",
    "pyinstaller>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shantytown"]

[tool.hatch.build.targets.wheel.force-include]
"src/shantytown/resources" = "shantytown/resources"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ANN", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["shantytown"]

[[tool.mypy.overrides]]
module = ["psutil", "psutil.*"]
ignore_missing_imports = true
